[package]
name = "solana-react-starter"
version = "0.0.1"
authors = ["Matias Olivera <moliverafreire@gmail.com>"]
repository = "https://github.com/olistic/solana-react-starter.git"
edition = "2018"

[dependencies]
solana-program = "=1.6.9"

[dev-dependencies]
solana-sdk = "=1.6.9"

[lib]
name = "starter"
crate-type = ["cdylib", "lib"]
