[package]
name = "solana-twitter"
version = "0.0.1"
authors = ["Matias Olivera <moliverafreire@gmail.com>"]
repository = "https://github.com/olistic/solana-twitter.git"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_twitter"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.20.1"
