[package]
name = "solana-x"
version = "0.1.0"
description = "X clone built on Solana"
authors = ["Matias Olivera <moliverafreire@gmail.com>"]
repository = "https://github.com/olistic/solana-x.git"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_x"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
