[package]
name = "tutorial"
version = "0.0.1"
authors = ["Matias Olivera <moliverafreire@gmail.com>"]
repository = "https://github.com/olistic/buildspace-solana-web3.git"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "tutorial"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.20.1"
